# cv-lab

./: .gitignore  CMakeLists.txt  Moire.sublime-project  Moire.sublime-workspace  main.cpp
src/: CMakeLists.txt  main.cpp  threshold.cpp  threshold.h
